add dos models e views recipes

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -4,10 +4,9 @@
 
     {% include "recipes/partials/head.html" %}
 
-    <title>{% block title %} Recipes {% endblock title %}</title>
+    <title>{% block title %} Recipes {% endblock title %} Recipes</title>
 
 </head>
-
 
 <body>
 
